<resources>
    <string name="app_name">Compose</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="new_group">New Group</string>
    <string name="begin">Let\'s Begin</string>
    <string name="onboard_title">Welcome to compose</string>
    <string name="onboard_message">Let\'s begin composing new messages</string>
    <string name="onboard_chat">Compose chats with your friends and families</string>
    <string name="onboard_groups">Compose chats in groups of your friends and families</string>
    <string name="onboard_call">Make calls with your friends and families</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="not_now">Not now</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>

    <string name="camera_permission_title">Allow camera access</string>
    <string name="camera_permission_message">Compose needs camera permission to take photos for this feature</string>
    <string name="camera_permission_message_detail">Compose needs camera permission to take photos for this feature. Tap Settings > Permissions, and turn Camera on</string>

    <!-- Place holders -->
    <string name="ph_message">Message</string>
    <string name="ph_search">Search..</string>

    <!-- Content descriptions -->
    <string name="cd_back">Back</string>
    <string name="cd_current_user">Current user</string>
    <string name="cd_user_profile">User profile</string>
    <string name="cd_emoji">Emoji</string>
    <string name="cd_attach_file">Attach file</string>
    <string name="cd_attach_location">Attach Location</string>
    <string name="cd_send_message">Send Message</string>
    <string name="cd_new_chat">New chat</string>
    <string name="cd_search_conversation">Search conversation</string>
    <string name="cd_archive_chat">Archive chat</string>
    <string name="cd_copy_chat">Delete chat</string>
    <string name="cd_delete_chat">Copy chat</string>
    <string name="cd_more_items">More items</string>
    <string name="cd_call">Call</string>
    <string name="cd_call_incoming">Incoming call</string>
    <string name="cd_call_outgoing">Outgoing call</string>
    <string name="cd_call_incoming_missed">Incoming missed call</string>
    <string name="cd_call_outgoing_missed">Outgoing missed call</string>
    <string name="cd_document">Attach document</string>
    <string name="cd_camera">Take photo</string>
    <string name="cd_gallery">Select image</string>

</resources>